--- a/app/src/main/res/layout/activity_buscar_por_tipo.xml
+++ b/app/src/main/res/layout/activity_buscar_por_tipo.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hga.appturismo.activity.ClasTurismoActivity">
+    tools:context="com.hga.appturismo.activity.BuscarPorTipoActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
