--- a/app/src/main/res/layout/activity_descripcion_restaurante.xml
+++ b/app/src/main/res/layout/activity_descripcion_restaurante.xml
@@ -47,7 +47,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
-                    android:text="Nombre: "
+                    android:text="@string/labelName"
                     android:textStyle="bold" />
 
                 <TextView
@@ -60,14 +60,14 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="250dp">
+                android:layout_height="220dp">
                 <android.support.v4.view.ViewPager
                     android:id="@+id/imagenTurismo"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="fitXY"
+                    android:layout_height="220dp"
+                    android:scaleType="matrix"
                     android:padding="0dp"
-
+                    android:layout_margin="0dp"
                     app:layout_collapseMode="parallax" />
             </LinearLayout>
             <LinearLayout
@@ -106,6 +106,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -124,6 +125,7 @@
                     android:layout_height="wrap_content"
                     android:text="" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -142,6 +144,7 @@
                     android:layout_height="wrap_content"
                     android:text="" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
