--- a/app/src/main/res/layout/activity_descripcion_turistico.xml
+++ b/app/src/main/res/layout/activity_descripcion_turistico.xml
@@ -116,6 +116,42 @@
                         android:layout_height="wrap_content"
                         android:text="" />
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textViewlinea"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Linea: "
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textViewLineaText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textViewFecha"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Fecha: "
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textViewFechaText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
