iconno aniadir usuario

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.hga.appturismo.activity.MainActivity">
+                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                 xmlns:tools="http://schemas.android.com/tools"
+                                                 android:layout_width="match_parent"
+                                                 android:layout_height="match_parent"
+                                                 tools:context="com.hga.appturismo.activity.MainActivity">
 
 
     <android.support.design.widget.AppBarLayout
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:background="?attr/colorPrimary"
             android:id="@+id/toolbar"
-            android:layout_height="?attr/actionBarSize"
             android:layout_width="match_parent"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
     </android.support.design.widget.AppBarLayout>
 
@@ -44,7 +44,7 @@
                     android:layout_height="match_parent"
                     android:layout_margin="10dp"
                     android:layout_weight="1"
-                    android:background="@drawable/icono_lugar" />
+                    android:background="@drawable/icono_lugar"/>
 
                 <ImageButton
                     android:id="@+id/btnMapaHoteles"
@@ -52,7 +52,7 @@
                     android:layout_height="match_parent"
                     android:layout_margin="10dp"
                     android:layout_weight="1"
-                    android:background="@drawable/icono_hotel" />
+                    android:background="@drawable/icono_hotel"/>
 
                 <ImageButton
                     android:id="@+id/btnMapaRestaurantes"
@@ -60,14 +60,15 @@
                     android:layout_height="match_parent"
                     android:layout_margin="10dp"
                     android:layout_weight="1"
-                    android:background="@drawable/icono_restaurante" />
+                    android:background="@drawable/icono_restaurante"/>
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="15dp">
+                android:padding="15dp"
+                android:weightSum="1">
 
                 <ImageView
                     android:id="@+id/imageView2"
@@ -76,10 +77,8 @@
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
 
-                    app:srcCompat="@drawable/img_portada" />
+                    app:srcCompat="@drawable/img_portada"/>
             </LinearLayout>
-
-
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -105,43 +104,59 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:weightSum="2">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="3"
+                android:gravity="center"
+                android:baselineAligned="false">
 
                 <LinearLayout
-                    android:id="@+id/layout_container_admin"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:id="@+id/layout_container_add_site"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="horizontal"
                     android:visibility="gone">
 
                     <ImageButton
-                        android:id="@+id/btnInsertar"
+                        android:id="@+id/btnInsertSite"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_margin="10dp"
-                        android:background="@drawable/icono_add_rhl"/>
-
+                        android:background="@drawable/icono_add_rhl"
+                        android:contentDescription="@string/description_imagen"/>
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/layout_container_users"
-                    android:layout_width="match_parent"
+                    android:id="@+id/layout_container_user_list"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                   android:visibility="gone">
+                    android:visibility="visible">
 
                     <ImageButton
-                        android:id="@+id/btnUsuarios"
+                        android:id="@+id/btnListUsuarios"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_margin="10dp"
-                        android:background="@drawable/icono_add_user"/>
+                        android:background="@drawable/icono_list_user"/>
                 </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/layout_container_add_user"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:visibility="gone">
+
+                    <ImageButton
+                        android:id="@+id/btnAddUsuarios"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_margin="10dp"
+                        android:background="@drawable/icono_add_user"
+                        android:contentDescription="@string/description_imagen"/>
+                </LinearLayout>
+
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
